--- a/package.json
+++ b/package.json
@@ -13,6 +13,10 @@
     "url": "https://github.com/Shivanikanswal/portfolio/issues"
   },
   "homepage": "https://github.com/Shivanikanswal/portfolio#readme",
+  "repository": {
+    "type": "git",
+    "url": "(https://github.com/Shivanikanswal/portfolio.git)"
+  },
   "devDependencies": {
     "parcel": "^2.12.0",
     "postcss": "^8.4.35",
